# ne_roman_to_devnagari_conversion

./: analyze_errors.py  debug_translit.py  errors.txt  extract_words.py  fix_words.py  learned_words.py  prune_learned_words.py  test_accuracy.py
Roman_to_Devnagari_Custom/: csv_nepali_roman_devanagari.json  test.json
nepali_romanizer/: README.md  pyproject.toml
nepali_romanizer/src/nepali_romanizer/: __init__.py  learned_words.py  transliterator.py  word_dict.py
nepali_romanizer/tests/: __init__.py  test_accuracy.py  test_basic.py
