[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nepali-romanizer"
version = "0.1.0"
description = "A robust Python package for Nepali Roman to Devnagari transliteration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "nepali",
    "devanagari",
    "transliteration",
    "roman",
    "romanization",
    "unicode",
    "nepal",
    "नेपाली"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Nepali",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nepali-romanizer"
Documentation = "https://github.com/yourusername/nepali-romanizer#readme"
Repository = "https://github.com/yourusername/nepali-romanizer"
Issues = "https://github.com/yourusername/nepali-romanizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nepali_romanizer" = ["data/*.json"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=nepali_romanizer --cov-report=term-missing"
